--- a/src/app/modules/find-connections/find-connections.component.scss
+++ b/src/app/modules/find-connections/find-connections.component.scss
@@ -22,8 +22,7 @@ $options-opener-width: calc(1.5rem + 2 * 8px);
   }
 
   .panels {
-    overflow-y: auto;
-    flex: 1;
+    overflow: auto;
   }
 
   .footer {
@@ -106,6 +105,7 @@ $options-opener-width: calc(1.5rem + 2 * 8px);
 
   .options {
     width: 100%;
+    height: 100%;
     transform: translateY(0);
     transition: transform 0.3s ease-out;
 
@@ -125,6 +125,10 @@ $options-opener-width: calc(1.5rem + 2 * 8px);
     icon.mobile {
       display: unset;
     }
+  }
+
+  .suggestions {
+    display: none;
   }
 }
 
